2012-05-28  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/theme.c: Removed deprecated warning.
	* common/gtk/config-gnome.c, server/player.c: Suppress warnings for
	the use of write.

2012-05-19  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c, common/gtk/game-rules.c: Translator hints.

2012-05-17  Roland Clobus <rclobus@rclobus.nl>
	* server/Evil_square.game, server/ubuntuland.game, server/default.game,
	server/crane_island.game, server/GuerreDe100ans.game,
	server/Mini_another_swimming_pool_in_the_wall.game, server/canyon.game,
	server/archipel_gold.game, server/iles.game, server/conquest.game,
	server/conquest+ports.game, server/small.game, server/seafarers.game,
	server/north_america.game, server/coeur.game, server/lorindol.game,
	server/seafarers-gold.game, server/5-6-player.game, server/lobby.game,
	server/south_africa.game, server/Another_swimming_pool_in_the_wall.game,
	server/henjes.game, server/Cube.game: Use the new descriptions. All
	games are saved by the editor.

2012-04-27  Roland Clobus <rlobus@rclobus.nl>
	* server/gtk/main.c, client/gtk/offline.c, editor/gtk/editor.c,
	common/gtk/theme.c, common/gtk/theme.h: Cleanup themes for valgrind.
	* common/gtk/guimap.c, common/gtk/theme.c, common/gtk/select-game.c,
	common/gtk/select-game.h: More cleanup for valgrind.
	* common/gtk/theme.c: Removed double rendering.
	* editor/gtk/editor.c: Reenabled the context menu on right-click
	which was disabled on 2011-02-23.

2012-04-06  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c: Added a file filter.

2012-04-05  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c: Use default folder in file dialogs.
	* common/map.c: Correctly handle NULL for chits, as introduced on
	2012-03-21.

2012-04-03  Roland Clobus <rclobus@rclobus.nl>
	* common/network.c, common/network.h, server/admin.c: Restrict
	knowledge of the Session struct to network.c

2012-03-28  Roland Clobus <rclobus@rclobus.nl>